--- a/website/docs/uni-app-x/_shared.mdx
+++ b/website/docs/uni-app-x/_shared.mdx
@@ -9,7 +9,7 @@
     target="_blank"
     rel="noopener noreferrer"
   >
-    <i className="iconify mdi--rocket-launch text-lg" />
+    <i className="icon-[mdi--rocket-launch] text-lg" />
     使用模板一键开始
   </a>
 </div>
