--- a/website/docs/uni-app-x/index.mdx
+++ b/website/docs/uni-app-x/index.mdx
@@ -18,7 +18,7 @@ import TailwindcssLogo from '../../../assets/logo.png'
   "
 >
   <img className="h-16 sm:h-20" src={TailwindcssLogo} alt="Tailwind CSS" />
-  <i className="iconify mdi--link text-3xl text-emerald-500 dark:text-emerald-300" />
+  <i className="icon-[mdi--link] text-3xl text-emerald-500 dark:text-emerald-300" />
   <img className="h-16 sm:h-20" src="/img/uni-app-x-logo.ico" alt="uni-app x" />
   <div className="ml-auto hidden text-right sm:block">
     <div className="text-xs font-medium text-emerald-700/80 dark:text-emerald-200/80">跨端原子化样式方案</div>
@@ -28,11 +28,11 @@ import TailwindcssLogo from '../../../assets/logo.png'
 
 <div className="not-prose mt-4 grid grid-cols-1 gap-3 sm:auto-cols-max sm:grid-flow-col">
   <a className="docs-cta-primary" href="https://github.com/icebreaker-template/uni-app-x-hbuilderx" target="_blank" rel="noopener noreferrer">
-    <i className="iconify mdi--rocket-launch text-xl" />
+    <i className="icon-[mdi--rocket-launch] text-xl" />
     一键使用模板项目（推荐）
   </a>
   <a className="docs-cta-secondary" href="/docs/uni-app-x/install">
-    <i className="iconify mdi--playlist-check text-lg opacity-80" />
+    <i className="icon-[mdi--playlist-check] text-lg opacity-80" />
     或者按步骤手动集成
   </a>
 </div>
