--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -37,4 +37,4 @@
 
 ## pnpm@10.x
 
-假如你已经升级到了 `pnpm@10.x`，在安装依赖后，可能需要执行 `pnpm approve-builds` 来运行一些 `npm hook` 命令
+假如你已经升级到了 `pnpm@10.x`，安装依赖后需要执行 `pnpm approve-builds weapp-tailwindcss` 将其加入 `onlyBuiltDependencies`，以便 `postinstall` 等 `npm hook` 能正常运行
