--- a/website/docs/tailwindcss/history/index.mdx
+++ b/website/docs/tailwindcss/history/index.mdx
@@ -83,6 +83,7 @@ flowchart TB
 - [CSS-in-JS 阶段](/docs/tailwindcss/history/css-in-js)
 - [Utility-first / Tailwind / UnoCSS](/docs/tailwindcss/history/utility-first)
 - [Token 化与 Headless 组件](/docs/tailwindcss/history/headless-tokens)
+- [生成式 CSS / 原生能力融合](/docs/tailwindcss/history/future-generative-css)
 
 ## 阶段代表性包速览与跳转
 
