--- a/website/docs/tailwindcss/history/index.mdx
+++ b/website/docs/tailwindcss/history/index.mdx
@@ -194,6 +194,21 @@ flowchart TD
   J -->|不重要| L["UnoCSS（更灵活自定义）"]
 ```
 
+## 语义化 vs 信息密度（跨方案视角）
+
+- 语义化：类名/文件/组件名是否能表达意图，调试定位是否直观。
+- 信息密度：相同视觉/语义信息写几次，是否集中在 tokens/variants 而非分散在模板里。
+
+| 方案 | 语义化 | 信息密度 | 典型优势 | 典型劣势/风险 |
+| --- | --- | --- | --- | --- |
+| Raw CSS / BEM/OOCSS | 命名可读性高，靠规范维持 | 中：样式分散，重复值常见 | 直观、零构建 | 全局覆盖难控，命名漂移 |
+| 预处理器（Sass/Less） | 语义取决于命名；嵌套过深反降语义 | 中：变量/混入提升复用但易散落 | 复用能力上升，写法顺手 | 嵌套地狱，tokens 未集中 |
+| CSS Modules | 类名哈希弱语义，组件/文件名补偿 | 中偏高：作用域隔离，重复值要抽公用模块 | 防止全局污染，调试靠映射 | 公共 tokens 不集中时易重复 |
+| CSS-in-JS（运行时） | 组件名/`displayName` 强语义；生成类名弱 | 中：模板内联值多，复用靠 mixin/主题 | 动态/主题灵活 | 运行时注入 + 样式分散，信息密度不足 |
+| CSS-in-JS（编译/零运行时：Linaria/stylex/vanilla-extract） | 导出常量或 style key 提供语义 | 高：静态求值 + Token 化，重复度低 | 零运行时+类型友好 | 写法受限，表达式需静态 |
+| Utility-first（Tailwind/Uno） | 单个原子语义弱，组合+组件名补偿 | 高：同一视觉只写一次类组合；配合 `cva/tv` 更高 | JIT/摇树、省重复 | content 不准时膨胀，class 漂移 |
+| Token + Headless（shadcn/ui, tailwind-variants） | 组件 API 命名语义强，类名在工厂内隐藏 | 高：信息集中在 tokens/variants；调用处低重复 | 统一体验，AI/脚本友好 | 需要维护 tokens/recipes，失控会漂移 |
+
 ## 原子化 CSS 解决/未解决的问题
 
 - ✅ 解决：
