chore(deps): upgrade

--- a/website/docs/tailwindcss/index.mdx
+++ b/website/docs/tailwindcss/index.mdx
@@ -49,6 +49,12 @@ import TabItem from '@theme/TabItem'
 5. [AI 友好提示与 Demo 运行指南](tailwindcss/ai-friendly-and-demos)
 6. [各样式方案 Demo 与产物对照](tailwindcss/demos)
 
+## 代码示例链接
+
+:::tip 重点示例
+**CSS 演进代码合集**：[css-history](https://github.com/sonofmagic/css-history) —— 按阶段收录 Raw CSS、预处理器、CSS-in-JS、Tailwind 等写法与产物截图，便于讲稿/对照演示时直接引用。
+:::
+
 ## React/Vue 代码快速预览
 
 <Tabs>
